--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "un-jobs-analytics-dashboard",
   "version": "1.0.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "@types/node": "^18.15.0",
     "@types/papaparse": "^5.3.14",
@@ -20,7 +21,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "build:azure": "npm run build && cp web.config build/",
+    "serve": "npx serve -s build",
+    "analyze": "npm run build && npx serve -s build"
   },
   "eslintConfig": {
     "extends": [
